# study-track-api

./: .gitignore  README.md  docker-compose.local.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 25469d4dab2a_добавил_модель_task_и_обновил_user.py  553aa5939dbe_init.py
src/: config.py  dev.py  main.py
src/db/: db.py
src/db/models/: base.py  task.py  user.py
src/db/repositories/: base.py  user.py
src/routes/: auth.py  root.py  tasks.py  users.py
src/schemas/: auth.py  base_dto.py  user.py
